--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8">
@@ -5,18 +6,34 @@
 </head>
 <body>
     <h1 id="msg">郵便番号API</h1>
-    <form name="apiform"><p>
-        郵便番号：<input type="text" name="zipcode">
-        <button type="button" id="btn1" onclick="zip_api(this.form)">実行</button>
-    </p></form>
+    <form name="apiform">
+        <p>
+            郵便番号：<input type="text" name="zipcode">
+            <button type="button" id="btn1" onclick="zip_api(this.form)">実行</button>
+        </p>
+    </form>
     
     <div id="result">結果はここに表示</div>
+
     <script>
         async function zip_api(myForm) {
-            const endpoint = "https://zipcloud.ibsnet.co.jp/api/search";
-            // ここにコードを書く
-            // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value; // 現状ではそのまま表示しているだけ
+            const endpoint = "https://zipcloud.ibsnet.co.jp/api/search?zipcode=" + myForm.zipcode.value;
+            
+            try {
+                const response = await fetch(endpoint);
+                const data = await response.json();
+
+                if (data.status === 200) {
+                    const result = data.results ? 
+                        `住所: ${data.results[0].address1} ${data.results[0].address2} ${data.results[0].address3}` :
+                        "該当する郵便番号が見つかりませんでした。";
+                    document.getElementById("result").innerHTML = result;
+                } else {
+                    document.getElementById("result").innerHTML = "エラー: " + data.message;
+                }
+            } catch (error) {
+                document.getElementById("result").innerHTML = "API呼び出しに失敗しました。";
+            }
         }
     </script>
 </body>
